--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [features]
 default = ["typenum"]
+unstable = []
 
 [dependencies]
 typenum = {version = "1.13.0", optional = true}
